# TerminalServerRPA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  _test_ui2.py  debug_web.txt  debug_web2.txt  debug_web2_err.txt  debug_web_err.txt  installer.iss  main.py  main.spec  pyproject.toml  updater.spec
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture-diagram.html  architecture.md  cli-reference.md  development.md  index.md  installation.md  plugins.md  roadmap.md  security.md  user-guide.md
docs/decisions/: ADR-0001-websocket-token-auth.md  ADR-0002-project-rename.md  ADR-0003-remove-orphan-core-layer.md  README.md
docs/plans/: execution-manager.md  improvement-plugins-memory.md
logs/diag/: before_image_match_Senior.html  before_text_match.html  image_match_Senior.html  ocr_last.txt
plugins/relatorio_contas_receber/: __init__.py  download.py  plugin.toml  steps.py  task.py  template.py
plugins/relatorio_contas_receber/pages/: selecao_modelos_para_execucao_page.py  valores_entrada_modelo_page.py
plugins/relatorio_contas_receber/phases/: __init__.py  base.py  constants.py  login.py  navigation.py  report.py
scripts/: ico_from_png.py  make_icon.py  svg_to_ico.py
src/automation/: param_resolvers.py
src/automation/browser/: browser_manager.py
src/automation/pages/: home_page.py  login_page.py  selecao_modelos_para_execucao_page.py  senior_login_page.py  sidebar_navigator.py  ts_applications_page.py  ts_login_page.py  user_registration_page.py  valores_entrada_modelo_page.py
src/automation/tasks/: __init__.py  bulk_user_registration_task.py  exemplo_task.py  report_generation.py
src/config/: settings.py  version.py
src/core/entities/: user.py
src/core/use_cases/: register_users_use_case.py
src/infrastructure/: breakpoint_store.py  events.py  execution_manager.py  execution_repository.py  logger.py  migrations.py  models.py  playwright_setup.py  plugin_loader.py  schedule_manager.py  screenshot_manager.py  single_instance.py  task_config.py  task_registry.py  task_runner.py  updater.py  vault.py
src/interfaces/: base_server.py
src/interfaces/cli/: cli.py
src/interfaces/gui/: server.py  tray.py  update_flow.py  webview_assets.py
src/interfaces/web/: router.py  schemas.py  server.py  websocket.py
src/password_vault/: cli.py  logger.py  router.py  server.py  single_instance.py  task_runner.py  updater.py  vault.py  websocket.py
src/password_vault/templates/: index.html
src/utils/: image_match.py  window_utils.py
tests/: conftest.py
tests/e2e/: test_vault_flow.py
tests/integration/: conftest.py
tests/integration/infrastructure/: test_event_bus.py  test_execution_persistence.py  test_task_runner_integration.py  test_vault_integration.py
tests/integration/password_vault/: test_vault_integration.py
tests/unit/: test_main.py
tests/unit/automation/: test_pages.py  test_param_resolvers.py  test_report_generation.py  test_tasks.py
tests/unit/config/: test_version.py
tests/unit/core/: test_register_users.py  test_user.py
tests/unit/infrastructure/: test_logger.py  test_migrations.py  test_models.py  test_plugin_loader.py  test_schedule_manager.py  test_single_instance.py  test_task_config.py  test_task_registry.py  test_task_registry_extended.py  test_task_runner.py  test_updater.py  test_vault.py
tests/unit/password_vault/: test_cli.py  test_cli_extended.py  test_logger.py  test_router.py  test_server.py  (+5 more)
tsrpa/: __init__.py
(+55 files in other folders)
