[project]
name = "senior-rpa"
version = "0.1.0"
description = "RPA application with encrypted credential vault"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.5.0",
    "keyring>=25.7.0",
    "cryptography>=48.0.0",
    "typer>=0.25.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html:coverage_html"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
