[project]
name = "terminalserverrpa"
version = "0.1.0"
description = "RPA application with encrypted credential vault"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.5.0",
    "keyring>=25.7.0",
    "cryptography>=48.0.0",
    "typer>=0.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "playwright>=1.59.0",
    "pyautogui>=0.9.54",
    "websockets>=16.0",
    "pillow>=12.2.0",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["*.spec"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "SIM"]
ignore = ["B904", "UP007"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are meant to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateUsage = false
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "watchfiles>=1.1.1",
]
